login form centered

--- a/maalr.gwt/src/main/java/de/uni_koeln/spinfo/maalr/webapp/ui/user/public/css/user.css
+++ b/maalr.gwt/src/main/java/de/uni_koeln/spinfo/maalr/webapp/ui/user/public/css/user.css
@@ -277,9 +277,8 @@ body {
      font-size: 30px;}
      
      #login_container {
-     margin: 0 45px;
-     padding: 20px 0 50px 20px !important;
-     margin-bottom: 100px;}
+   
+     margin-top: 145px;}
      
 /*      #maalr_login_info { */
 /*      margin-top: 20px} */
