--- a/maalr.gwt/src/main/java/de/uni_koeln/spinfo/maalr/webapp/ui/common/client/le.css
+++ b/maalr.gwt/src/main/java/de/uni_koeln/spinfo/maalr/webapp/ui/common/client/le.css
@@ -11,7 +11,7 @@
 	display: inline-block;
 }
 
-#languages {
+#text_editor {
 	width: 50%;
 	float: left;
 	display: inline-block;
@@ -33,6 +33,6 @@
 }
 
 #rta_langB {
-	width: 60%;
+	width: 100%;
 	float: left;
 }
