--- a/maalr.lenz/src/main/webapp/assets/style/about.css
+++ b/maalr.lenz/src/main/webapp/assets/style/about.css
@@ -1,7 +1,7 @@
 
 .title {
 text-align: left;
-padding: 10px;
+padding: 30px;
 }
 
 
@@ -9,8 +9,9 @@ padding: 10px;
 .exp {
 text-align: left;
 font-size:medium;
-margin-left: 15px;
-margin-right: 20px;
+margin-top: 20px;
+margin-left: 35px;
+margin-right: 40px;
 
 }
 
