--- a/maalr.gwt/src/main/java/de/uni_koeln/spinfo/maalr/webapp/ui/user/public/css/user.css
+++ b/maalr.gwt/src/main/java/de/uni_koeln/spinfo/maalr/webapp/ui/user/public/css/user.css
@@ -56,7 +56,7 @@ body {
 }
 
 #navi_head .left a {
-	color: #ffffff;
+	color: #eaf0f2;
 	padding: 0 20px;
 	text-decoration: overline;
 	border-right: 1px solid #E1DFDF;
@@ -417,10 +417,10 @@ input#internal_login {
 
 /* FOOTER */
 footer {
+	background-color: rgb(23,54,90);
 	clear: both;
-	background-color: #000;
 	width: 100%;
-	height: 60px;
+	height: 40px;
 	z-index: 999;
 	position: fixed;
 	bottom: 0;
@@ -428,7 +428,9 @@ footer {
 }
 
 ul#navi_bottom_menu {
-	padding: 20px 0 30px 0;
+	font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+	color: #eaf0f2;
+	padding: 10px 0px 0px 0px;
 	margin-left: 50px;
 }
 
@@ -438,7 +440,8 @@ ul#navi_bottom_menu {
 }
 
 #navi_bottom_menu a {
-	color: #fff;
+	font-weight: 300;
+	color: #eaf0f2;
 	padding-right: 30px;
 	text-decoration: none;
 }
