--- a/maalr.gwt/src/main/java/de/uni_koeln/spinfo/maalr/webapp/ui/user/public/css/user.css
+++ b/maalr.gwt/src/main/java/de/uni_koeln/spinfo/maalr/webapp/ui/user/public/css/user.css
@@ -102,8 +102,7 @@ body {
 }
 
 a#maalr-current-user {
-	color: #000 !important;
-	margin-left: -120px;
+	color: #eaf0f2;
 }
 
 ul.nav a#editor_backend {
