--- a/maalr.gwt/src/main/java/de/uni_koeln/spinfo/maalr/webapp/ui/user/public/css/user.css
+++ b/maalr.gwt/src/main/java/de/uni_koeln/spinfo/maalr/webapp/ui/user/public/css/user.css
@@ -136,23 +136,24 @@ img.login_icon {
 
 /* SEARCH BOX */
 #content .span4 {
-	float: left;
+	width: 250px;
 }
 
 #content #search_well {
 	background-color: #fff;
-	width: 320px;
+	width: 250px;
 	background-color: #F6F6F6;
 	border: 1px solid #e3e3e3;
 	box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
 	border-radius: 4px;
-	margin: -40px 0 50px 25px;
+	margin: -40px 0px 0px 50px;
+	padding 3px;
 }
 
 #content input#searchPhrase {
 	padding: 6px;
 	margin-bottom: 10px;
-	width: 200px;
+	width: 150px;
 	background-color: #fff;
 }
 
@@ -161,7 +162,7 @@ img.login_icon {
 }
 
 #searchoptions .control-group {
-	width: 300px;
+	width: 250px;
 }
 
 #searchoptions input {
@@ -219,8 +220,6 @@ label#highlight.gwt-checkbox-maalr.checkbox {
 
 /* RESULTS*/
 .span8 {
-	float: right !important;
-	margin-right: 20px;
 	width: 750px !important;
 }
 
@@ -231,6 +230,7 @@ label#highlight.gwt-checkbox-maalr.checkbox {
 	box-shadow: none;
 	padding-right: 20px;
 	margin-top: -40px;
+	margin-left: 70px;
 	border: 1px solid #e3e3e3;
 	box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
 	border-radius: 4px;
